// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fulfilled types 1`] = `
Object {
  "result": Object {
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "ADD_ACCOUNT_FULFILLED",
}
`;

exports[`fulfilled types 2`] = `
Object {
  "result": Object {
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "DELETE_ACCOUNT_FULFILLED",
}
`;

exports[`fulfilled types 3`] = `
Object {
  "result": Object {
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "DELETE_ACCOUNTS_FULFILLED",
}
`;

exports[`fulfilled types 4`] = `
Object {
  "result": Object {
    "view": Object {
      "accounts": Object {
        "test": "success",
      },
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "pending": false,
    },
  },
  "type": "GET_ACCOUNT_FULFILLED",
}
`;

exports[`fulfilled types 5`] = `
Object {
  "result": Object {
    "view": Object {
      "accounts": Object {
        "test": "success",
      },
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "pending": false,
    },
  },
  "type": "GET_ACCOUNTS_FULFILLED",
}
`;

exports[`fulfilled types 6`] = `
Object {
  "result": Object {
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "ADD_ACCOUNT_SHOW_FULFILLED",
}
`;

exports[`fulfilled types 7`] = `
Object {
  "result": Object {
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "EDIT_ACCOUNT_SHOW_FULFILLED",
}
`;

exports[`fulfilled types 8`] = `
Object {
  "result": Object {
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "UPDATE_ACCOUNT_HIDE_FULFILLED",
}
`;

exports[`pending types 1`] = `
Object {
  "result": Object {
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "ADD_ACCOUNT_PENDING",
}
`;

exports[`pending types 2`] = `
Object {
  "result": Object {
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "DELETE_ACCOUNT_PENDING",
}
`;

exports[`pending types 3`] = `
Object {
  "result": Object {
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "DELETE_ACCOUNTS_PENDING",
}
`;

exports[`pending types 4`] = `
Object {
  "result": Object {
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": true,
    },
  },
  "type": "GET_ACCOUNT_PENDING",
}
`;

exports[`pending types 5`] = `
Object {
  "result": Object {
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": true,
    },
  },
  "type": "GET_ACCOUNTS_PENDING",
}
`;

exports[`pending types 6`] = `
Object {
  "result": Object {
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "ADD_ACCOUNT_SHOW_PENDING",
}
`;

exports[`pending types 7`] = `
Object {
  "result": Object {
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "EDIT_ACCOUNT_SHOW_PENDING",
}
`;

exports[`pending types 8`] = `
Object {
  "result": Object {
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "UPDATE_ACCOUNT_HIDE_PENDING",
}
`;

exports[`rejected types 1`] = `
Object {
  "result": Object {
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "ADD_ACCOUNT_REJECTED",
}
`;

exports[`rejected types 2`] = `
Object {
  "result": Object {
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "DELETE_ACCOUNT_REJECTED",
}
`;

exports[`rejected types 3`] = `
Object {
  "result": Object {
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "DELETE_ACCOUNTS_REJECTED",
}
`;

exports[`rejected types 4`] = `
Object {
  "result": Object {
    "view": Object {
      "accounts": Array [],
      "error": true,
      "errorMessage": Object {
        "message": "MESSAGE",
        "response": Object {
          "data": Object {
            "detail": "ERROR",
          },
        },
      },
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "GET_ACCOUNT_REJECTED",
}
`;

exports[`rejected types 5`] = `
Object {
  "result": Object {
    "view": Object {
      "accounts": Array [],
      "error": true,
      "errorMessage": Object {
        "message": "MESSAGE",
        "response": Object {
          "data": Object {
            "detail": "ERROR",
          },
        },
      },
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "GET_ACCOUNTS_REJECTED",
}
`;

exports[`rejected types 6`] = `
Object {
  "result": Object {
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "ADD_ACCOUNT_SHOW_REJECTED",
}
`;

exports[`rejected types 7`] = `
Object {
  "result": Object {
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "EDIT_ACCOUNT_SHOW_REJECTED",
}
`;

exports[`rejected types 8`] = `
Object {
  "result": Object {
    "view": Object {
      "accounts": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "UPDATE_ACCOUNT_HIDE_REJECTED",
}
`;
